<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/activity_home_drawer_your_lunch"
            android:title="@string/your_lunch"
            android:icon="@drawable/baseline_restaurant_menu_24"/>

        <item
            android:id="@+id/activity_home_drawer_settings"
            android:title="@string/settings"
            android:icon="@drawable/baseline_settings_24"/>

        <item
            android:id="@+id/activity_home_drawer_logout"
            android:title="@string/logout"
            android:icon="@drawable/baseline_power_settings_new_24"/>

    </group>

</menu>